[package]
name = "spreadsheet"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
calamine = "0.19.1"     # For reading data from an excel file
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["time", "rt-multi-thread"] }  # Added rt-multi-thread
async-std = "1.10"

# Optional dependencies
anyhow = "1.0"    # For easier error handling
regex = "1.5"     # For more complex string parsing if needed

[dependencies.uuid]
version = "1.3"
features = ["v4"]
