[package]
name = "spreadsheet"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = "0.22.1"
lazy_static = "1.4"
tempfile = "3.10"
rocket = "0.5.0-rc.1"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(tarpaulin_include)"] }
